# rom-manager

./: .bumpversion.cfg  .codespellignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  usage.md
installation/: index.html
overview/: index.html
rom_manager/: __init__.py  __main__.py  agent_server.py  api_client.py  archives.py  auth.py  conversion.py  game_codes.py  main_agent.json  mcp_server.py  models.py  naming.py  ps1_codes.csv  ps1_codes.json  ps2_codes.csv  ps2_codes.json  psx_codes.json  rom_manager.py  version.py
rom_manager/adapters/: __init__.py  api_client.py
rom_manager/agent_data/: IDENTITY.md
rom_manager/core/: __init__.py  archives.py  conversion.py  naming.py
rom_manager/mcp/: __init__.py  mcp_conversion.py  mcp_game_codes.py  mcp_romm.py
rom_manager/models/: __init__.py  schemas.py
rom_manager/prompts/: __init__.py  convert_rom.md
rom_manager/romm/: __init__.py  auth.py  cli.py  openapi.json
rom_manager/romm/api/: __init__.py  api_client.py  api_client_base.py  api_client_collections.py  api_client_config.py  api_client_devices.py  api_client_feeds.py  (+10 more)
scripts/: verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_archives.py  test_bridge_concepts.py  test_concept_parity.py  test_conversion.py  test_game_codes.py  test_init_dynamics.py  test_mcp_registration.py  test_naming.py  test_romm_cli.py  test_romm_client.py  test_romm_coverage.py  test_romm_mcp_registration.py  test_startup.py
usage/: index.html
